Implemented Values Dialog

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+#valuesDialog::backdrop {
+    background-color: rgba(0,0,0,0.4);
+    backdrop-filter: blur(3px);
+}
+
 @layer utilities {
     .display-1 {
         font-family: var(--font-lora);
